extras/src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/semantic/excerr1.out
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/semantic/excerr1.obr:7:5:error: FallOverALot is declared more than once
    FallOverALot : EXCEPTION;
    ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/semantic/excerr1.obr:8:5:error: FallOverALot is declared more than once
    FallOverALot : EXCEPTION;
    ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/semantic/excerr1.obr:11:5:error: Bob is declared more than once
    Bob : EXCEPTION;
    ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/semantic/excerr1.obr:14:5:error: DivideByZero is declared more than once
    DivideByZero : EXCEPTION;
    ^
src/test/scala/org/bitbucket/inkytonik/kiama/example/obr/tests/exceptions/semantic/excerr1.obr:17:5:error: Bob is declared more than once
    Bob : INTEGER;
    ^
